--- a/style.css
+++ b/style.css
@@ -20,12 +20,9 @@ body
 
 .box1
 {
-    /* position: absolute; */
     float: left;
-    /* left: 15%; */
     width: 33%;
     height: 120%;
-    /* border: 1px solid hsl(31, 77%, 52%); */
     border-radius: 10px;
     background-color: hsl(31, 77%, 52%);
 }
@@ -34,7 +31,6 @@ body
 {
     margin-left: -25%;
     margin-top: 35%;
-    /* position: absolute; */
     float: left;
 }
 
@@ -42,7 +38,6 @@ body
 {
     margin-top: 0%;
     margin-left: 12%;
-    /* position: absolute; */
     float: left;
     font-size: large;
 }
@@ -51,7 +46,6 @@ body
 {
     float: left;
     cursor:pointer;
-    /* position: absolute; */
     bottom: 10%;
     margin-left: 25%;
     margin-top: 15%;
@@ -63,7 +57,6 @@ body
 
 .box1 img
 {
-    /* position: absolute; */
     float: left;
     margin-top: 8%;
     margin-left:10% ;
@@ -84,7 +77,6 @@ body
 {
     margin-left: -15%;
     margin-top: 30%;
-    /* position: absolute; */
     float: left;
 }
 
@@ -92,7 +84,6 @@ body
 {
     margin-top: 0%;
     margin-left: 12%;
-    /* position: absolute; */
     float: left;
     font-size: large;
 }
@@ -101,7 +92,6 @@ body
 {
     float: left;
     cursor:pointer;
-    /* position: absolute; */
     bottom: 10%;
     margin-left: 35%;
     margin-top: 15%;
@@ -110,4 +100,11 @@ body
     border: 2px solid white;
     background-color: white;
 }
+}
+
+.attribution
+{
+    position: absolute;
+    bottom: 0%;
+    font-size: larger;
 }
